--- a/store/blocks/desktop/components/header/menu/menu-food.jsonc
+++ b/store/blocks/desktop/components/header/menu/menu-food.jsonc
@@ -47,29 +47,32 @@
           "link#category__food--item-one",
           "link#category__food--item-two",
           "link#category__food--item-three"
-        ]
+        ], 
+        "props": {"blockClass": "container-items", "rowGap": 5}
       }, 
         "flex-layout.row#category__typefood--title": {
           "title": "structure-category-type-food-title", 
           "children": [
             "link#category__typefood--title",
             "icon#desktop__header--submenu"
-          ]
+          ], 
+          "props": {
+            "colSizing": "auto", 
+            "blockClass": "category__typefood--title"
+          }
         }, 
           "link#category__typefood--title": {
             "title": "title-type-food", 
             "props": {
               "blockClass": "category__subtitles", 
               "href": "/",
-              "label": "Tipo de alimento",
-              "width": 51
+              "label": "Tipo de alimento"
             }
           },
           "icon#desktop__header--submenu": {
             "props": {
               "id": "submenu-icon",
-              "width": 10
-              // "size": 20
+              "activeClassName": "submenuIcon"
             }
           },
         "link#category__food--item-one": {
@@ -107,14 +110,18 @@
           "flex-layout.row#category__medicatedfood--title", 
           "link#category__food--item-one",
           "link#category__food--item-two"
-        ]
+        ], 
+        "props": {"blockClass": "container-items", "rowGap": 5}
       },
         "flex-layout.row#category__medicatedfood--title": {
           "title": "structure-category-medicated-food-title", 
           "children": [
             "link#category__medicatedfood--title",
             "icon#desktop__header--submenu"
-          ]
+          ], 
+          "props": {
+            "colSizing": "auto"
+          }
         },
           "link#category__medicatedfood--title": {
             "title": "title-medicated-food", 
@@ -135,14 +142,18 @@
           "flex-layout.row#category__kindpet--title", 
           "flex-layout.row#category__kindpet--dog", 
           "flex-layout.row#category__kindpet--cat"
-        ]
+        ], 
+        "props": {"blockClass": "container-items", "rowGap": 5}
       },
         "flex-layout.row#category__kindpet--title": {
           "title": "structure-category-kind-pet-title", 
           "children": [
             "link#category__kindpet--title",
             "icon#desktop__header--submenu"
-          ]
+          ],
+          "props": {
+            "colSizing": "auto"
+          }
         },
           "link#category__kindpet--title": {
             "title": "title-kind-pet", 
@@ -159,13 +170,14 @@
             "link#category__kindpet--dog"
           ], 
           "props": {
-            "marginTop": 4
+            "marginTop": 4, 
+            "colSizing": "auto"
           }
         },
           "link#category__kindpet--dog": {
             "title": "category-kind-pet--item-dog", 
             "props": {
-              "blockClass": "items__submenu",
+              "blockClass": ["items__submenu", "items__kindpet"],
               "href": "/",
               "label": "Perro"
             }
@@ -181,12 +193,16 @@
           "children": [
             "icon#desktop__header--submenu-cat",
             "link#category__kindpet--cat"
-          ]
+          ], 
+          "props": {
+            "colSizing": "auto", 
+            "marginBottom": 4
+          }
         },
           "link#category__kindpet--cat": {
             "title": "category-kind-pet--item-cat", 
             "props": {
-              "blockClass": "items__submenu",
+              "blockClass": ["items__submenu", "items__kindpet"],
               "href": "/",
               "label": "Gato"
             }
@@ -208,14 +224,18 @@
           "flex-layout.row#category__all--title1", 
           "flex-layout.row#category__all--title2", 
           "flex-layout.row#category__all--title3"
-        ]
+        ], 
+         "props": {"blockClass": "container-items", "rowGap": 5}
       },
         "flex-layout.row#category__all--title1": {
           "title": "structure-category-all-title1", 
           "children": [
             "link#category__all--title1",
             "icon#desktop__header--submenu"
-          ]
+          ], 
+          "props": {
+            "colSizing": "auto"
+          }
         },
           "link#category__all--title1": {
             "title": "title1-all-food", 
@@ -230,7 +250,10 @@
           "children": [
             "link#category__all--title2",
             "icon#desktop__header--submenu"
-          ]
+          ],
+          "props": {
+            "colSizing": "auto"
+          }
         },
           "link#category__all--title2": {
             "title": "title2-everything-puppy", 
@@ -247,7 +270,10 @@
           "children": [
             "link#category__all--title3",
             "icon#desktop__header--submenu"
-          ]
+          ], 
+          "props": {
+            "colSizing": "auto"
+          }
         },
           "link#category__all--title3": {
             "title": "title3-offers", 
@@ -258,60 +284,6 @@
             }
           },
 /***********************************************************************************************************/
-  "menu-item#desktop__menu--department-three": {
-    "title": "header-menu-department-beauty",
-    "props": {
-      "blockClass": "department-main",
-      "id": "department-three", 
-      "type": "custom", 
-      "itemProps": {
-        "type": "external", 
-        "href": "https://www.google.com/",
-        "noFollow": true,
-        "tagTitle": "BELLEZA E HIGIENE",
-        "text":"BELLEZA E HIGIENE" 
-      }
-    },
-    "blocks": [
-      "submenu#department__food"
-    ]
-  },
-  "menu-item#desktop__menu--department-four": {
-    "title": "header-menu-department-accessories",
-    "props": {
-      "blockClass": "department-main",
-      "id": "department-four", 
-      "type": "custom", 
-      "itemProps": {
-        "type": "external", 
-        "href": "https://www.google.com/",
-        "noFollow": true,
-        "tagTitle": "COMPLEMENTOS Y ACCESORIOS",
-        "text":"COMPLEMENTOS Y ACCESORIOS"   
-      }
-    },
-    "blocks": [
-      "submenu#department__food"
-    ]
-  },
-  "menu-item#desktop__menu--department-five": {
-    "title": "header-menu-department-toys",
-    "props": {
-      "blockClass": "department-main",
-      "id": "department-five", 
-      "type": "custom", 
-      "itemProps": {
-        "type": "external", 
-        "href": "https://www.google.com/",
-        "noFollow": true,
-        "tagTitle": "JUGUETES",
-        "text":"JUGUETES" 
-      }
-    },
-    "blocks": [
-      "submenu#department__food"
-    ]
-  }, 
   "menu-item#desktop__menu--department-six": {
     "title": "header-menu-department-medicines",
     "props": {
@@ -330,158 +302,4 @@
       "submenu#department__food"
     ]
   }
-  // "menu-item#desktop__menu--department-seven": {
-  //   "title": "header-menu-department-for-you",
-  //   "props": {
-  //     "blockClass": "department-main",
-  //     "id": "department-seven", 
-  //     "type": "custom", 
-  //     "itemProps": {
-  //       "type": "external", 
-  //       "href": "https://www.google.com/",
-  //       "noFollow": true,
-  //       "tagTitle": "PARA TI",
-  //       "text":"PARA TI" 
-  //     }
-  //   }
-  // }
 }
-
-//       "menu-item#department__one": {
-//         "props": {
-//           "blockClass": "department-main",
-//           "id": "department-one",
-//           "orientation": "horizontal",
-//           // "onMountBehavior": "true", 
-//           "type": "custom",
-//           "itemProps": {
-//             "type": "external", 
-//             "href": "https://www.google.com/",
-//             "noFollow": true,
-//             "tagTitle": "ALIMENTO",
-//             "text": "ALIMENTO"
-//           }
-//         },
-//         "blocks": [
-//           "submenu#department__one", 
-//           "submenu#medicated-food",
-//           "submenu#kind-of-pet",
-//           "submenu#see-all-food"
-//         ]
-//       },
-//       "menu-item#department__two": {
-//         "props": {
-//           "blockClass": "department-main",
-//           "id": "department-two", 
-//           "type": "custom", 
-//           "itemProps": {
-//             "type": "external", 
-//             "href": "https://www.google.com/",
-//             "noFollow": true,
-//             "tagTitle": "SNACKS",
-//             "text": "SNACKS" 
-//           }
-//         }, 
-//         "blocks": [
-//           // "vtex.menu@2.x:submenu#snacks", 
-//           "submenu#kind-of-pet"
-//         ]
-//       }, 
-//       "menu-item#department__three": {
-        // "props": {
-        //   "blockClass": "department-main",
-        //   "id": "department-three", 
-        //   "type": "custom", 
-        //   "itemProps": {
-        //     "type": "external", 
-        //     "href": "https://www.google.com/",
-        //     "noFollow": true,
-        //     "tagTitle": "BELLEZA E HIGIENE",
-        //     "text":"BELLEZA E HIGIENE" 
-        //   }
-//         }, 
-//         "blocks": [
-//           // "vtex.menu@2.x:submenu#toilet-accessories",
-//           // "vtex.menu@2.x:submenu#sands-and-sandboxes",
-//           // "vtex.menu@2.x:submenu#education",
-//           // "vtex.menu@2.x:submenu#kind-of-pet"
-//         ]
-//       }, 
-//       "menu-item#department__four": {
-        // "props": {
-        //   "blockClass": "department-main",
-        //   "id": "department-four", 
-        //   "type": "custom", 
-        //   "itemProps": {
-        //     "type": "external", 
-        //     "href": "https://www.google.com/",
-        //     "noFollow": true,
-        //     "tagTitle": "COMPLEMENTOS Y ACCESORIOS",
-        //     "text":"COMPLEMENTOS Y ACCESORIOS"   
-        //   }
-//         }, 
-//         "blocks": [
-//           // "vtex.menu@2.x:submenu#muzzles-and-beds",
-//           // "vtex.menu@2.x:submenu#identification-and-collars",
-//           // "vtex.menu@2.x:submenu#feeders-clothes-and-others",
-//           // "vtex.menu@2.x:submenu#kind-of-pet"
-//         ]
-//       },
-//       "menu-item#department__five": {
-        // "props": {
-        //   "blockClass": "department-main",
-        //   "id": "department-five", 
-        //   "type": "custom", 
-        //   "itemProps": {
-        //     "type": "external", 
-        //     "href": "https://www.google.com/",
-        //     "noFollow": true,
-        //     "tagTitle": "JUGUETES",
-        //     "text":"JUGUETES" 
-        //   }
-        // }, 
-//         "blocks": [
-//           // "vtex.menu@2.x:submenu#catnip",
-//           // "vtex.menu@2.x:submenu#balls",
-//           // "vtex.menu@2.x:submenu#kind-of-pet"
-//         ]
-//       }, 
-//       "menu-item#department__six": {
-        // "props": {
-        //   "blockClass": "department-main",
-        //   "id": "department-six", 
-        //   "type": "custom", 
-        //   "itemProps": {
-        //     "type": "external", 
-        //     "href": "https://www.google.com/",
-        //     "noFollow": true,
-        //     "tagTitle": "MEDICAMENTOS",
-        //     "text":"MEDICAMENTOS" 
-        //   }
-        // }, 
-//         "blocks": [
-//           // "vtex.menu@2.x:submenu#dermatological-and-dewormers",
-//           // "vtex.menu@2.x:submenu#healt",
-//           // "vtex.menu@2.x:submenu#other",
-//           // "vtex.menu@2.x:submenu#kind-of-pet"
-//         ]
-//       }, 
-//       "menu-item#department__seven": {
-        // "props": {
-        //   "blockClass": "department-main",
-        //   "id": "department-seven", 
-        //   "type": "custom", 
-        //   "itemProps": {
-        //     "type": "external", 
-        //     "href": "https://www.google.com/",
-        //     "noFollow": true,
-        //     "tagTitle": "PARA TI",
-        //     "text":"PARA TI" 
-        //   }
-        // }, 
-//         "blocks": [
-//           // "vtex.menu@2.x:submenu#clothing-accessories-and-supplies",
-//           // "vtex.menu@2.x:submenu#see-all-for-you"
-//         ]
-//       }
-// }
