--- a/store/blocks/desktop/components/home/home-slider.jsonc
+++ b/store/blocks/desktop/components/home/home-slider.jsonc
@@ -1,6 +1,6 @@
 {
-  "list-context.image-list#global__home--slider-list":{
-    "title":"lista de imágenes",
+  "list-context.image-list#desktop__home--slider-list":{
+    "title":"list-of-images-desktop",
     "children": ["slider-layout#home__slider--list"],
     "props": {
       // "preload":true,
@@ -25,7 +25,7 @@
     }
   },
   "slider-layout#home__slider--list":{
-    "title":"slider con lista",
+    "title":"slider-with-list-desktop",
     "props": {
       "itemsPerPage": {
         "desktop": 1,
