--- a/store/blocks/mobile/screen/home.jsonc
+++ b/store/blocks/mobile/screen/home.jsonc
@@ -2,14 +2,16 @@
   "responsive-layout.mobile": {
     "title": "mobile component",
     "children": [
-      "list-context.image-list#global__home--slider-list"
-        // "flex-layout.row#global__home--section-search"
+      "list-context.image-list#mobile__home--slider-list",
+      "flex-layout.row#mobile__home--section-search",
         // "rich-text#global__home--title-categories",
         // "flex-layout.row#global__home--categories",
-        // "flex-layout.row#global__home--section-one",
-        // "rich-text#global__home--title-services",
-        // "flex-layout.row#global__home--section-services1",
-        // "flex-layout.row#global__home--section-services2", 
+      "flex-layout.row#mobile__home--section-promotions",
+      "rich-text#global__home--title-services",
+      "flex-layout.row#mobile__home--section-services1",
+      "flex-layout.row#mobile__home--section-services1-part2",
+      "flex-layout.row#mobile__home--section-services2",
+      "flex-layout.row#mobile__home--section-services2-part-two"
         // "search-result-layout.customQuery#home__search"
     ]
   }
