--- a/store/blocks/desktop/screen/home.jsonc
+++ b/store/blocks/desktop/screen/home.jsonc
@@ -10,9 +10,9 @@
       "rich-text#global__home--title-services",
       "flex-layout.row#desktop__home--section-services1",
       "flex-layout.row#desktop__home--section-services2",
-      "modal-trigger#desktop__home--modal-children",
+      "modal-trigger#desktop__home--modal-children"
       // "modal-trigger#desktop__home--modal-event"
-      "search-result-layout.customQuery#home__search"
+      // "search-result-layout.customQuery#home__search"
     ]
   }, 
   "search-result-layout.customQuery#home__search": {
