--- a/store/blocks/desktop/components/home/home-main.jsonc
+++ b/store/blocks/desktop/components/home/home-main.jsonc
@@ -16,14 +16,14 @@
       "rich-text#global__home--title-products",
       "list-context.product-list#global__home--products-recommended",
       "rich-text#global__home--title-favorites",
+      "list-context.product-list#global__home--products-favorites",
       "rich-text#global__home--title-services",
       "flex-layout.row#desktop__home--section-services1",
       "flex-layout.row#desktop__home--section-services2",
-      "modal-trigger#desktop__home--modal-children",
+      "modal-trigger#desktop__home--modal-children"
       // "modal-trigger#desktop__home--modal-event"
-      "search-result-layout.customQuery#home__search"
+      // "search-result-layout.customQuery#home__search"
     ]
-    // "props": {"blockClass": "desktop__home--main"}
   }
 }
 
