--- a/store/blocks/global/screen/footer.jsonc
+++ b/store/blocks/global/screen/footer.jsonc
@@ -1,125 +1,8 @@
 {
   "footer": {
-    "blocks": ["footer-layout.desktop", "footer-layout.mobile"]
+    "blocks": [
+      "footer-layout.desktop", 
+      "footer-layout.mobile"
+    ]
   }
-  // "flex-layout.row#mobile__footer--middle": {
-  //   "children": [
-  //     "flex-layout.col#mobile__footer--middle-col-one"
-  //   ], 
-  //   "props": {"blockClass": "desktop__footer--middle"}
-  // },
-  // "flex-layout.col#mobile__footer--middle-col-one": {
-  //   "children": [
-  //     "logo#desktop__header--logo",
-  //     "rich-text#footer__middle--follow-us",
-  //     "social-networks", 
-  //     "rich-text#footer__middle--store", 
-  //     "flex-layout.row#footer__middle--select-store", 
-  //     "menu#about-us"
-  //   ],
-  //   "props": {"blockClass":"footer__middle--col-one"}
-  // }
-  // "disclosure-layout-group#footer__menu--group": {
-  //   "children": [
-  //     "disclosure-layout#policies",
-  //     "disclosure-layout#about-us"
-  //     // "disclosure-layout#departments"
-  //   ]
-  // },
-  // "disclosure-layout#policies": {
-  //   "children": ["disclosure-trigger#policies", "disclosure-content#policies"]
-  // }, 
-  // "disclosure-trigger#policies": {
-  //   "children": ["rich-text#policies"]
-  // }, 
-  // "rich-text#policies": {
-  //   "props": {
-  //     "text": "Políticas de la tienda"
-  //   }
-  // }, 
-  // "disclosure-content#policies": {
-  //   "children": ["menu#policies"]
-  // }, 
-  // "menu#policies": {
-  //   "children": [
-  //     "menu-item#terms-and-conds", 
-  //     "menu-item#privacy-policies"
-  //   ], 
-  //   "props": {
-  //     "orientation": "vertical"
-  //   }
-  // }, 
-  // "menu-item#terms-and-conds": {
-  //   "props": {
-  //     "id": "menu-terms-and-conds", 
-  //     "type": "custom", 
-  //     "itemProps": {
-  //       "type": "internal", 
-  //       "href": "/", 
-  //       "tagTitle": "Términos y condiciones", 
-  //       "text": "Términos y condiciones"
-  //     }
-      
-  //   }
-  // }, 
-  // "menu-item#privacy-policies": {
-  //   "props": {
-  //     "id": "menu-privacy-policies", 
-  //     "type": "custom", 
-  //     "itemProps": {
-  //       "type": "internal", 
-  //       "href": "/", 
-  //       "tagTitle": "Políticas de privacidad", 
-  //       "text": "Políticas de privacidad"
-  //     }
-  //   }
-  // }, 
-  // "disclosure-layout#about-us": {
-  //   "children": ["disclosure-trigger#about-us", "disclosure-content#about-us"]
-  // }, 
-  // "disclosure-trigger#about-us": {
-  //   "children": ["rich-text#about-us"]
-  // }, 
-  // "rich-text#about-us": {
-  //   "props": {
-  //     "text": "Políticas de la tienda"
-  //   }
-  // }, 
-  // "disclosure-content#about-us": {
-  //   "children": ["menu#about-us2"]
-  // }
-  // "menu#about-us2": {
-  //   "children": [
-  //     "menu-item#about-us2", 
-  //     "menu-item#links-interest"
-  //     // "menu-item#customer-service"
-  //   ], 
-  //   "props": {
-  //     "orientation": "vertical"
-  //   }
-  // }, 
-  // "menu-item#about-us2": {
-  //   "props": {
-  //     "id": "menu-about-us", 
-  //     "type": "custom", 
-  //     "itemProps": {
-  //       "type": "internal", 
-  //       "href": "/", 
-  //       "tagTitle": "Acerca de Kanú", 
-  //       "text": "Acerca de Kanú"
-  //     }
-  //   }
-  // }, 
-  // "menu-item#links-interest": {
-  //   "props": {
-  //     "id": "menu-our-shops", 
-  //     "type": "custom", 
-  //     "itemProps": {
-  //       "type": "internal", 
-  //       "href": "/", 
-  //       "tagTitle": "Nuestras tiendas", 
-  //       "text": "Nuestras tiendas"
-  //     }
-  //   }
-  // }
 }
