feat: home folder structure on tablet, mobile and phone with their styles

--- a/store/blocks/desktop/components/home/home-services.jsonc
+++ b/store/blocks/desktop/components/home/home-services.jsonc
@@ -208,7 +208,7 @@
       "rich-text#section__services2-msg4" : {
         "title": "info-delivery-time", 
         "props": {
-          "blockClass": "section__services2-text",
+          "blockClass": ["section__services2-text", "section__services2-text-tablet"],
           "text": "**Entrega en 3 días hábiles**\n aprox. En temporada de promociones\n puede variar",
           "textAlignment": "CENTER"
         }
