--- a/store/blocks/global/screen/home.jsonc
+++ b/store/blocks/global/screen/home.jsonc
@@ -3,7 +3,9 @@
     "title": "Home", 
     "blocks": [
       "responsive-layout.mobile",
-      "responsive-layout.desktop"
+      "responsive-layout.desktop", 
+      "responsive-layout.phone",
+      "responsive-layout.tablet"
     ]
   }
 }
