--- a/store/blocks/global/components/home/home-recommended-products.jsonc
+++ b/store/blocks/global/components/home/home-recommended-products.jsonc
@@ -1,4 +1,46 @@
 {
+  "search-result-layout.customQuery#home__search": {
+    "props": {
+      "querySchema": {
+        "skusFilter": "ALL", 
+        "simulationBehavior": "skip"
+      }
+    },
+    "blocks": [
+      "search-result-layout.desktop#desktop__home--search", 
+      "search-result-layout.mobile#mobile__home--search", 
+      "search-not-found-layout"
+    ]
+  }, 
+  "search-result-layout.desktop#desktop__home--search": {
+    "children": [
+      "flex-layout.row#mobile__home--results"
+    ]
+  }, 
+  "search-result-layout.mobile#mobile__home--search": {
+    "children": [
+      "flex-layout.row#mobile__home--results"
+    ]
+  }, 
+  "flex-layout.row#mobile__home--results": {
+    "children": [
+      // "flex-layout.col#home__results--filter", 
+      "flex-layout.col#home__results--search"
+    ]
+  },
+  // "flex-layout.col#home__results--filter":, 
+  "flex-layout.col#home__results--search":{
+    "children": ["search-content#home__results--search"]
+  }, 
+  "search-content#home__results--search": {
+    "blocks": [
+      "gallery", 
+      "not-found"
+    ]
+  }, 
+  "gallery": {
+    "blocks": ["product-summary.shelf"]
+  },
   "list-context.product-list#global__home--products-recommended": {
     "title": "Section-products-recommended",
     "blocks": ["product-summary.shelf#home__products--recommended"],
@@ -10,7 +52,7 @@
         "product-summary-image",
         "product-summary-name",
         "product-summary-sku-selector",
-        // "product-selling-price",
+        "product-selling-price",
         "add-to-cart-button"
       ]
     },
